--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <li>Hello, World!
         <li class="nav-item">
           <a class="nav-link" href="#A">A</a>
         </li>
@@ -104,7 +105,6 @@
         <li class="nav-item">
           <a class="nav-link" href="#Z">Z</a>
         </li>
-
       </ul>
     </div>
   </nav>
