Add new error to show linting

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
   <link href="css/style.css" rel="stylesheet">
 
   <title>Programming languages &laquo;Hello, World!&raquo; ABC</title>
+  
+  <foo>Bar</foo>
 </head>
 
 <body>
